--- a/index.html
+++ b/index.html
@@ -165,15 +165,14 @@
         </a-entity>
 
         <!-- t !-->
-        <a-entity group rotation="0 45 0" contreform id="objects" scale='1.5 1.5 1.5'
+        <a-entity group contreform id="objects" scale='1.5 1.5 1.5'
          text-geometry="value: T; font: #optimerBoldFont;"
             position="0.7 0.3 -3"></a-entity>
         <a-entity group form id="objects" scale='1.5 1.5 1.5'
-            text-geometry="value: t; font: #optimerBoldFont;" position="0.7 0.3 -3" class="clickable" gesture-handler
-            gesture-handler="minScale: 0.25; maxScale: 10"
+            text-geometry="value: t; font: #optimerBoldFont;" position="0.7 0.3 -3" class="clickable"
             animation=" property: scale;  dur: 8000; dir: alternate; loop:true; easing: easeInSine;  to: 1.5 1.5 7;">
         </a-entity>
-        <a-entity group rotation="0 45 0" forma id="objects" scale='1.5 1.5 1.5'
+        <a-entity group forma id="objects" scale='1.5 1.5 1.5'
          text-geometry="value: w; font: #optimerBoldFont;"
             position="0.7 0.3 -3"></a-entity>
 
