--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>AR.js Basic Camera Example</title>
+    <title>Le gout des signes</title>
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script
         src="https://unpkg.com/aframe-text-geometry-component@^0.5.0/dist/aframe-text-geometry-component.min.js"></script>
@@ -14,27 +14,15 @@
 
 <body>
 
-    <!-- <style>
-            .arjs-loader {
-                height: 100%;
-                width: 100%;
-                position: absolute;
-                top: 0;
-                left: 0;
-                background-color: black;
-                z-index: 9999;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-            .arjs-loader div {
-                text-align: center;
-                font-size: 5.25em;
-                color: white;
-            }
-        </style> -->
 
-    <a-scene vr-mode-ui="enabled: false" arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false;'
+    <style>
+        .a-loader-title {
+            color: white;
+        }
+
+    </style>
+
+    <a-scene  loading-screen="dotsColor: white; backgroundColor: black"vr-mode-ui="enabled: false" arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false;'
         renderer="logarithmicDepthBuffer:true">
 
         <a-assets>
@@ -113,7 +101,7 @@
         <!-- l !-->
         <a-entity group form id="objects" scale='1.5 1.5 1.5' text-geometry="value: L; font: #optimerBoldFont;"
             position="-1 0.25 -0.5" class="clickable" gesture-handler gesture-handler="minScale: 0.25; maxScale: 10"
-            animation=" property: scale;  dur: 2500; dir: alternate; loop:true; easing: easeInSine;  to: 1.5 1.5 4;">
+            animation=" property: scale;  dur: 2500; dir: alternate; loop:true; easing: easeOutSine;  to: 1.5 1.5 3;">
         </a-entity>
 
         <a-entity group forma id="objects" scale='1.5 1.5 1.5' text-geometry="value: m; font: #optimerBoldFont;"
@@ -132,7 +120,7 @@
             position="-0.9 0.75 -1"></a-entity>
         <a-entity group form id="objects" scale='1.5 1.5 1.5' text-geometry="value: E; font: #optimerBoldFont;"
             position="-0.9 0.75 -1" class="clickable" gesture-handler gesture-handler="minScale: 0.25; maxScale: 10"
-            animation=" property: scale;  dur: 3000; dir: alternate; loop:true; easing: easeInSine;  to: 1.5 1.5 4;">
+            animation=" property: scale;  dur: 3000; dir: alternate; loop:true; easing: easeOutSine;  to: 1.5 1.5 3;">
         </a-entity>
 
 
@@ -141,7 +129,7 @@
             position="-0.9 0.25 -3"></a-entity>
         <a-entity group form id="objects" scale='1.5 1.5 1.5' text-geometry="value: g; font: #optimerBoldFont;"
             position="-0.9 0.25 -3" class="clickable" gesture-handler gesture-handler="minScale: 0.25; maxScale: 10"
-            animation=" property: scale;  dur: 2500; dir: alternate; loop:true; easing: easeInSine;  to: 1.5 1.5 7;">
+            animation=" property: scale;  dur: 2500; dir: alternate; loop:true; easing: easeOutSine;  to: 1.5 1.5 3;">
         </a-entity>
         <a-entity group forma id="objects" scale='1.5 1.5 1.5' text-geometry="value: h; font: #optimerBoldFont;"
             position="-0.9 0.25 -3"></a-entity>
@@ -155,7 +143,7 @@
             position="-0.2 0.15 -3"></a-entity>
         <a-entity group form id="objects" scale='1.5 1.5 1.5' text-geometry="value: o; font: #optimerBoldFont;"
             position="-0.2 0.15 -3" class="clickable" gesture-handler gesture-handler="minScale: 0.25; maxScale: 10"
-            animation=" property: scale;  dur: 3000; dir: alternate; loop:true; easing: easeInSine;  to: 1.5 1.5 7;">
+            animation=" property: scale;  dur: 3000; dir: alternate; loop:true; easing: easeOutSine;  to: 1.5 1.5 3;">
         </a-entity>
         <a-entity group forma id="objects" scale='1.5 1.5 1.5' text-geometry="value: f; font: #contreForme;"
             position="-0.2 0.15 -3"></a-entity>
@@ -165,7 +153,7 @@
         <a-entity group rotation="0 45 0" form id="objects" scale='1.5 1.5 1.5'
             text-geometry="value: u; font: #optimerBoldFont;" position="0.1 0.7 -3" class="clickable" gesture-handler
             gesture-handler="minScale: 0.25; maxScale: 10"
-            animation=" property: scale;  dur: 3000; dir: alternate; loop:true; easing: easeInSine;  to: 1.5 1.5 7;">
+            animation=" property: scale;  dur: 3000; dir: alternate; loop:true; easing: easeOutSine;  to: 1.5 1.5 3;">
         </a-entity>
         <a-entity group forma id="objects" scale='1.5 1.5 1.5' rotation="0 45 0"
             text-geometry="value: q; font: #contreForme;" position="0.1 0.7 -3"></a-entity>
@@ -175,7 +163,7 @@
             position="0.7 0.3 -3"></a-entity>
         <a-entity group form id="objects" scale='1.5 1.5 1.5' text-geometry="value: t; font: #optimerBoldFont;"
             position="0.7 0.3 -3" class="clickable"
-            animation=" property: scale;  dur: 2500; dir: alternate; loop:true; easing: easeInSine;  to: 1.5 1.5 7;">
+            animation=" property: scale;  dur: 2500; dir: alternate; loop:true; easing: easeOutSine;  to: 1.5 1.5 3;">
         </a-entity>
         <a-entity group forma id="objects" scale='1.5 1.5 1.5' text-geometry="value: w; font: #contreForme;"
             position="0.7 0.3 -3"></a-entity>
@@ -186,7 +174,7 @@
         <a-entity group form id="objects" scale='1.5 1.5 1.5' text-geometry="value: D; font: #optimerBoldFont;"
             rotation="0 -80 0" position="1 1 -2.6" class="clickable" gesture-handler
             gesture-handler="minScale: 0.25; maxScale: 10"
-            animation=" property: scale;  dur: 2500; dir: alternate; loop:true; easing: easeInSine;  to: 1.5 1.5 4;">
+            animation=" property: scale;  dur: 2000; dir: alternate; loop:true; easing: easeOutSine;  to: 1.5 1.5 3;">
         </a-entity>
         <a-entity group forma id="objects" scale='1.5 2.5 1.5' text-geometry="value: k; font: #contreForme;"
             rotation="0 -80 0" position="1 0.96 -2.6">
@@ -198,7 +186,7 @@
         <a-entity group form id="objects" scale='1.5 1.5 1.5' text-geometry="value: E; font: #optimerBoldFont;"
             rotation="0 -80 0" position="1.3 1.3 -2.4" class="clickable" gesture-handler
             gesture-handler="minScale: 0.25; maxScale: 10"
-            animation=" property: scale;  dur: 2500; dir: alternate; loop:true; easing: easeInSine;  to: 1.5 1.5 4;">
+            animation=" property: scale;  dur: 2500; dir: alternate; loop:true; easing: easeOutSine;  to: 1.5 1.5 3;">
         </a-entity>
         <a-entity group forma id="objects" scale='1.5 1.5 1.5' text-geometry="value: é; font: #contreForme;"
             rotation="0 -80 0" position="1.3 1.3 -2.4">
@@ -212,7 +200,7 @@
         <a-entity group form id="objects" scale='1.5 1.5 1.5' text-geometry="value: s; font: #optimerBoldFont;"
             rotation="0 -80 0" position="1 1.4 -1.4" class="clickable" gesture-handler
             gesture-handler="minScale: 0.25; maxScale: 10"
-            animation=" property: scale;  dur: 3000; dir: alternate; loop:true; easing: easeInSine;  to: 1.5 1.5 4;">
+            animation=" property: scale;  dur: 3000; dir: alternate; loop:true; easing: easeOutSine;  to: 1.5 1.5 3;">
         </a-entity>
         <a-entity group forma id="objects" scale='1.5 1.5 1.5' text-geometry="value: z; font: #contreForme;"
             rotation="0 -80 0" position="1 1.4 -1.4"></a-entity>
@@ -224,7 +212,7 @@
         <a-entity group form id="objects" scale='1.5 1.5 1.5' text-geometry="value: s; font: #optimerBoldFont;"
             rotation="0 -80 0" position="1 0.3 -1" class="clickable" gesture-handler
             gesture-handler="minScale: 0.25; maxScale: 10"
-            animation=" property: scale;  dur: 2500; dir: alternate; loop:true; easing: easeInSine;  to: 1.5 1.5 4;">
+            animation=" property: scale;  dur: 2500; dir: alternate; loop:true; easing: easeOutSine;  to: 1.5 1.5 3;">
         </a-entity>
         <a-entity group forma id="objects" scale='1.5 1.5 1.5' text-geometry="value: z; font: #optimerBoldFont;"
             rotation="0 -80 0" position="1 0.3 -1"></a-entity>
@@ -239,7 +227,7 @@
         <a-entity group form id="objects" scale='1.5 1.5 1.5' text-geometry="value: i; font: #optimerBoldFont;"
             rotation="0 -80 0" position="1.4 -0.15 -0.6" class="clickable" gesture-handler
             gesture-handler="minScale: 0.25; maxScale: 10"
-            animation=" property: scale;  dur: 3000; dir: alternate; loop:true; easing: easeInSine;  to: 1.5 1.5 4; ">
+            animation=" property: scale;  dur: 3000; dir: alternate; loop:true; easing: easeOutSine;  to: 1.5 1.5 3; ">
         </a-entity>
         <a-entity group forma id="objects" scale='1.5 1.5 1.5' text-geometry="value: j; font: #contreForme;"
             rotation="0 -80 0" position="1.4 -0.15 -0.6">
@@ -250,7 +238,7 @@
         <a-entity group form id="objects" scale='1.5 1.5 1.5' text-geometry="value: g; font: #optimerBoldFont;"
             rotation="0 -80 0" position="1.5 0.3 0" class="clickable" gesture-handler
             gesture-handler="minScale: 0.25; maxScale: 10"
-            animation=" property: scale;  dur: 5000; dir: alternate; loop:true; easing: easeInSine;  to: 1.5 1.5 4;">
+            animation=" property: scale;  dur: 2000; dir: alternate; loop:true; easing: easeOutSine;  to: 1.5 1.5 3;">
         </a-entity>
         <a-entity group forma id="objects" scale='1.5 1.5 1.5' text-geometry="value: h; font: #contreForme;"
             rotation="0 -80 0" position="1.5 0.3 0">
@@ -262,7 +250,7 @@
         <a-entity group form id="objects" scale='1.5 1.5 1.5' text-geometry="value: n; font: #optimerBoldFont;"
             rotation="0 -180 0" position="1.1 0 0.6" class="clickable" gesture-handler
             gesture-handler="minScale: 0.25; maxScale: 10"
-            animation=" property: scale;  dur: 2500; dir: alternate; loop:true; easing: easeInSine;  to: 1.5 1.5 4;">
+            animation=" property: scale;  dur: 2500; dir: alternate; loop:true; easing: easeOutSine;  to: 1.5 1.5 3;">
         </a-entity>
         <a-entity group forma id="objects" scale='1.5 1.5 1.5' text-geometry="value: f; font: #contreForme;"
             rotation="0 -180 0" position="1.1 0 0.6"></a-entity>
@@ -275,7 +263,7 @@
         <a-entity group form id="objects" scale='1.5 1.5 1.5' text-geometry="value: E; font: #optimerBoldFont;"
             rotation="0 -180 0" position="0.5 0.3 0.9" class="clickable" gesture-handler
             gesture-handler="minScale: 0.25; maxScale: 10"
-            animation=" property: scale;  dur: 5000; dir: alternate; loop:true; easing: easeInSine;  to: 1.5 1.5 4;">
+            animation=" property: scale;  dur: 5000; dir: alternate; loop:true; easing: easeOutSine;  to: 1.5 1.5 3;">
         </a-entity>
         <a-entity group forma id="objects" scale='1.5 1.5 1.5' text-geometry="value: é; font: #contreForme;"
             rotation="0 -180 0" position="0.5 0.3 0.9"></a-entity>
@@ -289,7 +277,7 @@
         <a-entity group form id="objects" scale='1.5 1.5 1.5' text-geometry="value: s; font: #contreForme;"
             rotation="0 -180 0" position="-0.2 0.3 0.5" class="clickable" gesture-handler
             gesture-handler="minScale: 0.25; maxScale: 10"
-            animation=" property: scale;  dur: 3000; dir: alternate; loop:true; easing: easeInSine;  to: 1.5 1.5 4;">
+            animation=" property: scale;  dur: 3000; dir: alternate; loop:true; easing: easeOutSine;  to: 1.5 1.5 3;">
         </a-entity>
         <a-entity group forma id="objects" scale='1.5 1.5 1.5' text-geometry="value: z; font: #contreForme;"
             rotation="0 -180 0" position="-0.2 0.3 0.5"></a-entity>
